--- a/src/app/student/footer/footer.component.html
+++ b/src/app/student/footer/footer.component.html
@@ -13,12 +13,15 @@
               <strong>Email:</strong> ThesisTrack@gmail.com<br />
             </p>
             <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <!-- <a href="#" class="zalo"><i class="bx bxl-zalo"></i></a> -->
+              <a href="https://www.facebook.com/huybinh.nguyen.3720/" class="facebook"><i
+                  class="bx bxl-facebook"></i></a>
+              <a href="https://www.instagram.com/huy_binh_01/?hl=en" class="instagram"><i
+                  class="bx bxl-instagram"></i></a>
+              <a href="https://t.me/NguyenHuyBinh09" class="telegram"><i class="bx bxl-telegram"></i></a>
+              <a href="mailto:your-email@gmail.com" class="gmail"><i class="bx bx-envelope"></i></a>
             </div>
+
           </div>
         </div>
 
@@ -28,16 +31,6 @@
             <li><i class="bx bx-chevron-right"></i> <a href="#">Trang chủ</a></li>
             <li>
               <i class="bx bx-chevron-right"></i> <a href="#">Về chúng tôi</a>
-            </li>
-            <li>
-              <i class="bx bx-chevron-right"></i> <a href="#">Dịch vụ</a>
-            </li>
-            <li>
-              <i class="bx bx-chevron-right"></i>
-              <a href="#">Điều khoản dịch vụ</a>
-            </li>
-            <li>
-              <i class="bx bx-chevron-right"></i> <a href="#">Chính sách bảo mật</a>
             </li>
           </ul>
         </div>
@@ -52,25 +45,15 @@
               <i class="bx bx-chevron-right"></i>
               <a href="#">Phát triển web</a>
             </li>
-            <li>
-              <i class="bx bx-chevron-right"></i>
-              <a href="#">Quản lý sản phẩm</a>
-            </li>
-            <li>
-              <i class="bx bx-chevron-right"></i> <a href="#">Marketing</a>
-            </li>
-            <li>
-              <i class="bx bx-chevron-right"></i> <a href="#">Thiết kế đồ họa</a>
-            </li>
           </ul>
         </div>
 
         <div class="col-lg-4 col-md-6 footer-newsletter">
           <h4>Thông tin bản tin của chúng tôi</h4>
-          <p>
-            Tamen quem nulla quae legam multos aute sint culpa legam noster
-            magna
-          </p>
+          <p>The "Graduation Thesis Management Software System" serves as a vital link between students and instructors,
+            facilitating student registration for advisory professors, thesis topic registration, arrangement of
+            presentation schedules, and student result management. It also ensures seamless communication by notifying
+            users through email about important updates and information.</p>
           <form action="" method="post">
             <input type="email" name="email" /><input type="submit" value="Đăng ký" />
           </form>
