--- a/src/app/student/home/home.component.html
+++ b/src/app/student/home/home.component.html
@@ -4,45 +4,44 @@
   <div class="container" data-aos="fade-up">
     <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
       <div class="col-xl-6 col-lg-8 text-center">
-        <h1>HỆ THỐNG QUẢN LÝ LUẬN VĂN TỐT NGHIỆP</h1>
-        <h2>Giúp bạn quản lý nghiên cứu một cách hiệu quả</h2>
+        <h1>HỆ THỐNG THỰC HIỆN LUẬN VĂN TỐT NGHIỆP</h1>
+        <h2>"Khám Phá Tri Thức, Bước Chân Học Thuật, Hệ Thống Hỗ Trợ Hiệu Quả Cho Cuộc Hành Trình Luận Văn Tốt Nghiệp Của Bạn!"</h2>
       </div>
     </div>
 
     <div class="row gy-4 mt-5 justify-content-center" data-aos="zoom-in" data-aos-delay="250">
-      <div class="col-xl-2 col-md-4">
+      <div class="col-xl-2 col-md-4" routerLink="/register_teacher">
         <div class="icon-box">
-          <i class="ri-book-line"></i>
-          <h3><a href="#">Quản lý đề tài</a></h3>
+          <i class="ri-user-line"></i> <!-- Icon cho Đăng ký giảng viên hướng dẫn -->
+          <h3><a >Đăng ký giảng viên hướng dẫn</a></h3>
+        </div>
+      </div>
+      <div class="col-xl-2 col-md-4" routerLink="/register_topic">
+        <div class="icon-box">
+          <i class="ri-file-text-line"></i> <!-- Icon cho Đăng ký đề tài luận văn -->
+          <h3><a >Đăng ký đề tài luận văn</a></h3>
+        </div>
+      </div>
+      <div class="col-xl-2 col-md-4" routerLink="/report_calendar">
+        <div class="icon-box">
+          <i class="ri-calendar-check-line"></i> <!-- Icon cho Xem lịch báo cáo luận văn -->
+          <h3><a >Xem lịch báo cáo luận văn</a></h3>
+        </div>
+      </div>
+      <div class="col-xl-2 col-md-4" routerLink="/feedback">
+        <div class="icon-box">
+          <i class="ri-feedback-line"></i> <!-- Icon cho Phản hồi hệ thống -->
+          <h3><a href="#">Phản hồi hệ thống</a></h3>
         </div>
       </div>
       <div class="col-xl-2 col-md-4">
         <div class="icon-box">
-          <i class="ri-calendar-check-line"></i>
-          <h3><a href="#">Quản lý xếp lịch</a></h3>
-        </div>
-      </div>
-      <div class="col-xl-2 col-md-4">
-        <div class="icon-box">
-          <!-- <i class="ri-group-line"></i> -->
-          <i class="ri-chat-check-line"></i>
-
-          <h3><a href="#">Nhận xét và đánh giá</a></h3>
-        </div>
-      </div>
-      <div class="col-xl-2 col-md-4">
-        <div class="icon-box">
-          <i class="ri-time-line"></i>
-          <h3><a href="#">Tiết kiệm thời gian</a></h3>
-        </div>
-      </div>
-      <div class="col-xl-2 col-md-4">
-        <div class="icon-box">
-          <i class="ri-lock-line"></i>
+          <i class="ri-shield-line"></i> <!-- Icon cho Bảo mật thông tin -->
           <h3><a href="#">Bảo mật thông tin</a></h3>
         </div>
       </div>
     </div>
+    
   </div>
 </section>
 
@@ -65,16 +64,19 @@
           </p>
           <ul>
             <li>
-              <i class="ri-check-double-line"></i> Hệ thống hỗ trợ nghiên cứu, đảm bảo bạn có tất cả công cụ cần thiết
-              để khám phá tri thức một cách hiệu quả và cùng sáng tạo.
+              <i class="ri-check-double-line"></i> Hệ thống hỗ trợ kết nối giảng viên hướng dẫn và sinh viên làm luận văn tốt nghiệp.
             </li>
             <li>
-              <i class="ri-check-double-line"></i> Cung cấp nguồn tài liệu và dịch vụ thư viện, kết nối bạn với nguồn
-              thông tin toàn cầu và giúp bạn nâng cao năng lực nghiên cứu.
+              <i class="ri-check-double-line"></i> Cung cấp đăng ký giảng viên hướng dẫn với điểm trung bình tích lũy và đăng ký đề tài cua sinh viên.
             </li>
             <li>
-              <i class="ri-check-double-line"></i> Vị trí trạm dừng tuyệt vời cho sự tiến bộ nghiên cứu của bạn, gần các
-              nguồn tài nguyên quan trọng và sự hỗ trợ từ cộng đồng nghiên cứu.
+              <i class="ri-check-double-line"></i> Sắp xếp và quản lý lịch báo cáo hiệu quả.
+            </li>
+            <li>
+              <i class="ri-check-double-line"></i> Nhận xét và đánh giá kết quả sinh viên.
+            </li>
+            <li>
+              <i class="ri-check-double-line"></i> Thông báo kết quả sinh viên.
             </li>
           </ul>
         </div>
@@ -139,12 +141,24 @@
   <section id="services" class="services">
     <div class="container" data-aos="fade-up">
       <div class="section-title">
-        <h2>Dịch vụ</h2>
-        <p>Các dịch vụ của chúng tôi</p>
+        <h2>Hoạt động</h2>
+        <p>Các hoạt động của hệ thống</p>
       </div>
 
       <div class="row">
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100"
+          routerLink="/register_teacher">
+          <div class="icon-box">
+            <div class="icon"><i class="bx bx-pencil"></i></div>
+            <h4><a href="#">Đăng ký giảng viên hướng dẫn</a></h4>
+            <p>
+              Sinh viên đăng ký giảng viên hướng dẫn nhập đúng điểm trung bình tích lũy hiện tại để giảng viên xem xét.
+            </p>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100"
+          routerLink="/register_topic">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-pencil"></i></div>
             <h4><a href="#">Đăng ký đề tài</a></h4>
@@ -155,7 +169,8 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200"
+          routerLink="/report_calendar">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-calendar"></i></div>
             <h4><a href="#">Xếp lịch báo cáo</a></h4>
@@ -166,7 +181,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-edit"></i></div>
             <h4><a href="#">Nhận xét</a></h4>
@@ -175,13 +190,13 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100"
+          routerLink="/feedback">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-star"></i></div>
-            <h4><a href="#">Đánh giá kết quả</a></h4>
+            <h4><a href="#">Phản hồi</a></h4>
             <p>
-              Giảng viên và cán bộ hồi đồng đánh giá kết quả đồ án luận văn của sinh viên, kết quả sẽ được hệ thống tổng
-              hợp và xử lý hoàn thành sẽ thông báo kết quả sinh viên.
+              Hệ thống cung cấp chức năng phản hồi khi sinh viên có thắc mắc hoặc đóng góp ý kiến cho hệ thống.
             </p>
           </div>
         </div>
