--- a/src/app/student/infomark-dialog/infomark-dialog.component.html
+++ b/src/app/student/infomark-dialog/infomark-dialog.component.html
@@ -1,8 +1,11 @@
 <!-- biên bản kết quả sinh sinh viên  -->
 
-<body>
+<div class="body">
     <div class="container">
         <div class="layout">
+            <button class="close-button">
+                <a routerLink="/feedback">Đóng</a>
+            </button>
             <header>
                 <div class="school1">
                     <p>TRƯỜNG ÐẠI HỌC CẦN THƠ</p>
@@ -20,7 +23,7 @@
                 <h1>BIÊN BẢN CỦA HỘI ĐỒNG</h1>
                 <h1>CHẤM BẢO VỆ LUẬN VĂN ĐẠI HỌC</h1>
                 <h1>Học kỳ: 1 năm học 2023 - 2024</h1>
-                <h2>Ngành/ Chuyên ngành: (đỗ dữ liệu vào)</h2>
+                <h2>Ngành/ Chuyên ngành: Công nghệ thôn tin</h2>
                 <p>____________</p>
             </div>
 
@@ -29,12 +32,12 @@
             <div class="info">
 
                 <div class="info3">
-                    <p>Họ và tên sinh viên thực hiện: </p>
-                    <p>MASV:........ Mã lớp:.......</p>
-                    <P>Giáo viên hướng dẫn: </P>
-                    <p>Tên đề tài</p>
-                    <p>Địa điểm bảo vệ: </p>
-                    <p>Thời gian lúc: ..... ngày ...... tháng ...... năm 2023</p>
+                    <p><b>Họ và tên sinh viên thực hiện:</b> Nguyễn Huy Bình</p>
+                    <p><b>MASV:</b> B1910191 <b>Mã lớp: </b>DI10V7A3</p>
+                    <P><b>Giáo viên hướng dẫn: </b>TS. Thái Minh Tuấn</P>
+                    <p><b>Tên đề tài: </b> Hệ thống thực hiện luận văn tốt nghiệp</p>
+                    <p><b>Địa điểm bảo vệ: </b>217/DI</p>
+                    <p><b>Thời gian lúc:</b> 15:20 ngày 10 tháng 12 năm 2023</p>
                 </div>
 
                 <!-- <div class="info2">
@@ -52,23 +55,26 @@
                     gồm
                     các thành viên:</p>
                 <div class="prosor">
-                    <p>1: Chủ tịch Hội đồng: </p>
-                    <p>2: Ủy viên: </p>
-                    <p>3: Thư ký: </p>
+                    <p><b>1. Chủ tịch Hội đồng:</b> ThS. Nguyễn Minh Trung</p>
+                    <p><b>2. Ủy viên:</b> ThS. Nguyễn Thị Kim Yến</p>
+                    <p><b>3. Thư ký: </b> TS. Thái Minh Tuấn </p>
                 </div>
                 <h3><b>Chủ tịch Hội đồng, điều khiển buổi bảo vệ luận văn</b></h3>
                 <h3><b>2.1 Sinh viên: </b>trình bày luận văn</h3>
                 <div>
                     <h3><b>2.2 Các câu hỏi của thành viên hội đồng và trả lời sinh viên:</b></h3>
-                    <input type="text" style="height: 100px;">
+                    <!-- <input type="text" style="height: 100px;"> -->
+                    <h4>Sinh viên vấn đáp tốt</h4>
                 </div>
                 <div>
                     <h3><b>2.3 </b> Góp ý của thành viên hội đồng:</h3>
-                    <input type="text" style="height: 100px;">
+                    <h4>Hệ thống phát triển thêm tự đồng sắp xếp lịch báo cáo </h4>
+                    <!-- <input type="text" style="height: 100px;"> -->
                 </div>
                 <div>
                     <h3><b>2.4 </b> Nhận xét ý kiến của người hướng dẫn:</h3>
-                    <input type="text" style="height: 100px;">
+                    <!-- <input type="text" style="height: 100px;"> -->
+                    <h4>Hệ thống cần mở rộng thêm nhiều chức năng hơn</h4>
                 </div>
 
                 <div>
@@ -99,33 +105,32 @@
                                         Điểm/10
                                     </td>
                                     <td>
-
+                                        9.5
                                     </td>
                                     <td>
-
+                                        9.5
                                     </td>
                                     <td>
-
+                                        9.5
                                     </td>
                                 </tr>
                             </tbody>
                         </table>
 
                     </section>
-                    <p class="mark">Trung bình: điểm số ................/10, điểm chữ:
-                        ...................................................</p>
+                    <p class="mark">Trung bình: điểm số 9.5/10, điểm chữ: Chín Năm</p>
                 </div>
 
                 <div>
                     <h3><b>2.6 Kết luận của Hội đồng:</b></h3>
                     <div class="kl">
-                    <p>Luận văn của sinh viên ........... đạt (Không đạt) yêu cầu.</p>
-                    <p>Điểm: </p>
+                        <p>Luận văn của sinh viên ........... đạt (Không đạt) yêu cầu.</p>
+                        <p>Điểm: </p>
                     </div>
                 </div>
 
                 <div class="kl1">
-                    <p>Hội đồng kết thúc vào lúc ........... cùng ngày.
+                    <p>Hội đồng kết thúc vào lúc 15:30 cùng ngày.
                     </p>
                 </div>
 
@@ -135,7 +140,7 @@
                     <p>Chủ tịch hội đồng</p>
                 </div>
                 <div class="info2">
-                    <p>Cần Thơ, ngày ….. tháng …. năm …</p>
+                    <p>Cần Thơ, ngày 10 tháng 12 năm 2023</p>
                     <p>Thư ký hội đồng</p>
                 </div>
             </div>
@@ -143,4 +148,4 @@
 
         </div>
     </div>
-</body> 
+</div>
