--- a/src/app/student/register-teacher/register-teacher.component.html
+++ b/src/app/student/register-teacher/register-teacher.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 <!-- đăng ký đề tài -->
 
-<body>
-    <div class=topp>
+<div class="body">
+    <div class="topp">
         <!-- <div class="top"></div> -->
 
         <div class="info">
@@ -38,7 +38,8 @@
                 </tr>
                 <tr>
                     <td>Đề tài: </td>
-                    <td>Hệ thống thực hiện luận văn tốt nghiệp</td>
+                    <td></td>
+                    <!-- <td>Hệ thống thực hiện luận văn tốt nghiệp</td> -->
                 </tr>
                 <tr>
                     <td>Kết quả: </td>
@@ -47,18 +48,32 @@
 
                 </tr>
                 <tr>
-                    <td>
-                        <a style="color: rgb(247, 183, 65); font-weight: bold;">Xem chi tiết</a>
+                    <td style="color: rgb(247, 183, 65); font-weight: bold;">
+                        Xem chi tiết
                     </td>
-                    <td>
-                        <select>
-                            <option value="1">Biên bản hội đồng chấm luận văn</option>
-                            <option value="2">Phiếu chấm điểm của Chủ Tịch hội đồng</option>
-                            <option value="3">Phiếu chấm điểm của Hội đồng phản biện</option>
-                            <option value="4">Phiếu chấm điểm của Thư ký</option>
-                        </select>
-                    </td>
-                </tr>
+                    <!-- <td>
+                        <div class="infom">
+                            <a class="btn btn-primary btn-sm" data-toggle="modal" data-target="#exampleModal" routerLink="/infomark">
+                                <i class="fas fa-check-circle"></i> Biên bản hội đồng chấm luận văn
+                            </a>
+                        </div>
+                        <div class="infom">
+                            <a class="btn btn-primary btn-sm" data-toggle="modal" data-target="#exampleModal" routerLink="/mark">
+                                <i class="fas fa-check-circle"></i> Phiếu chấm điểm của Chủ Tịch hội đồng
+                            </a>
+                        </div>
+                        <div class="infom">
+                            <a class="btn btn-primary btn-sm" data-toggle="modal" data-target="#exampleModal" routerLink="/mark">
+                                <i class="fas fa-check-circle"></i> Phiếu chấm điểm của Hội đồng phản biện
+                            </a>
+                        </div>
+                        <div class="infom">
+                            <a class="btn btn-primary btn-sm" data-toggle="modal" data-target="#exampleModal" routerLink="/mark">
+                                <i class="fas fa-check-circle"></i> Phiếu chấm điểm của Thư ký
+                            </a>
+                        </div>
+                        
+                </tr> -->
             </table>
         </div>
 
@@ -93,40 +108,41 @@
             </form>
         </div>
 
-    </div>
-    <div >
 
-        <div class="register_topic">
-            <h4>Lịch sử đăng ký giảng viên</h4>
-            <div class="text-muted">
-                Lưu ý: Bạn có thể đăng ký nhiều giảng viên khi chờ xác nhận. Nếu có 1 giảng viên nào đó xác nhận, thì các đăng ký khác sẽ bị hủy
+        <div>
+
+            <div class="register_topic">
+                <h4>Lịch sử đăng ký giảng viên</h4>
+                <div class="text-muted">
+                    Lưu ý: Bạn có thể đăng ký nhiều giảng viên khi chờ xác nhận. Nếu có 1 giảng viên nào đó xác nhận,
+                    thì các đăng ký khác sẽ bị hủy
+                </div>
+                <table style="background-color: white">
+                    <thead>
+                        <th>Giảng viên</th>
+                        <th>Khoa</th>
+                        <th>Trạng thái</th>
+                        <th>Phản hồi từ GV</th>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let r of register;index as i">
+                            <td>{{r.teacher.name}}</td>
+                            <td>{{r.teacher.faculty.name}}</td>
+                            <td>
+                                <div *ngIf="r.status == 1">Đã chập nhận</div>
+                                <div *ngIf="r.status == 0">Chờ xác nhận</div>
+                                <div *ngIf="r.status == 2">Đã bị hủy</div>
+                            </td>
+                            <td>{{r.note}}</td>
+                        </tr>
+                    </tbody>
+
+                </table>
             </div>
-            <table style="background-color: white">
-                <thead>
-                    <th>Giảng viên</th>
-                    <th>Khoa</th>
-                    <th>Trạng thái</th>
-                    <th>Phản hồi từ GV</th>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let r of register;index as i">
-                        <td>{{r.teacher.name}}</td>
-                        <td>{{r.teacher.faculty.name}}</td>
-                        <td>
-                            <div *ngIf="r.status == 1">Đã chập nhận</div>
-                            <div *ngIf="r.status == 0">Chờ xác nhận</div>
-                            <div *ngIf="r.status == 2">Đã bị hủy</div>
-                        </td>
-                        <td>{{r.note}}</td>
-                    </tr>
-                </tbody>
-                
-            </table> 
+
         </div>
 
+
     </div>
-
-
-    
-</body>
+</div>
 <app-footer></app-footer>
