--- a/src/app/student/feedback/feedback.component.html
+++ b/src/app/student/feedback/feedback.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <!-- đăng ký đề tài -->
 
-<body>
+<div class="body">
     <div class=topp>
         <div class="info">
             <div class="header">
@@ -35,12 +35,36 @@
                     <td>{{ student.major }}</td>
                 </tr>
                 <tr>
-                    <td>Giảng viên hướng dẫn: </td>
-                    <td>.....</td>
-                </tr>
-                <tr>
-                    <td>Đề tài: </td>
-                    <td>...</td>
+                    <td style="color: rgb(247, 183, 65); font-weight: bold;">
+                        Xem chi tiết kết quả
+                    </td>
+                    <td>
+                        <div class="infom">
+                            <a class="btn btn-primary btn-sm gray-background" data-toggle="modal" data-target="#exampleModal"
+                                routerLink="/infomark">
+                                <i class="fas fa-check-circle"></i> Biên bản hội đồng chấm luận văn
+                            </a>
+                        </div>
+                        <div class="infom">
+                            <a class="btn btn-primary btn-sm gray-background" data-toggle="modal" data-target="#exampleModal"
+                                routerLink="/mark">
+                                <i class="fas fa-check-circle"></i> Phiếu chấm điểm của Chủ Tịch hội đồng
+                            </a>
+                        </div>
+                        <div class="infom">
+                            <a class="btn btn-primary btn-sm gray-background" data-toggle="modal" data-target="#exampleModal"
+                                routerLink="/markstudent1">
+                                <i class="fas fa-check-circle"></i> Phiếu chấm điểm của Hội đồng phản biện
+                            </a>
+                        </div>
+                        <div class="infom">
+                            <a class="btn btn-primary btn-sm gray-background" data-toggle="modal" data-target="#exampleModal"
+                                routerLink="/markstudent2">
+                                <i class="fas fa-check-circle"></i> Phiếu chấm điểm của Thư ký
+                            </a>
+                        </div>
+                        
+
                 </tr>
             </table>
         </div>
@@ -76,37 +100,17 @@
                     </div>
                     <div>
                         <label for="toggleLabel">Nội dung phản hồi</label>
-                        <input type="text" placeholder="Nhập nội dung" class="custom-input" [(ngModel)]="feedbackContent" name="feedbackContent">
+                        <input type="text" placeholder="Nhập nội dung" class="custom-input"
+                            [(ngModel)]="feedbackContent" name="feedbackContent">
                     </div>
                     <button type="submit">Gửi</button>
                 </div>
             </form>
         </div>
-        
+
 
     </div>
 
-    <!-- <div class="register_topic">
-        <form>
-            <h4>Phản hồi sinh viên</h4>
-            <div class="semester">
-                <div>
-                    <label for="name">Your Name:</label>
-                    <input type="text" id="name" name="name" required>
-                </div>
-                <div>
-                    <label for="email">Your Email:</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div>
-                    <label for="message">Your Feedback:</label>
-                    <textarea id="message" name="message" rows="4" required></textarea>
-                </div>
 
-
-                <button>Gửi</button>
-            </div>
-        </form>
-    </div> -->
-</body>
+</div>
 <app-footer></app-footer>
