--- a/src/app/student/infomark-dialog/infomark-dialog.component.css
+++ b/src/app/student/infomark-dialog/infomark-dialog.component.css
@@ -1,4 +1,4 @@
-body {
+.body {
     font-family: Arial, sans-serif;
     /* font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; */
     margin: 0;
@@ -26,6 +26,7 @@ header {
     /* justify-content: space-between; */
     width: 100%;
     margin-bottom: 20px;
+    font-weight: bold;
 }
 
 /* thông tin trường  */
@@ -54,7 +55,14 @@ header {
     font-size: 20px;
     margin-bottom: 0px;
 }
-
+b {
+    font-weight: bold;
+}
+h4 {
+    font-size: 20px;
+    color: #333;
+    margin-left: 50px;
+}
 /* thông tin sinh viên và giảng viên  */
 .info {
 
@@ -92,7 +100,8 @@ header {
 p {
     margin-top: 0px;
     margin-bottom: 0px;
-    font-size: 20px;
+    font-size: 28px;
+    /* font-weight: bold; */
 }
 
 h1 {
@@ -205,4 +214,26 @@ footer {
     footer {
         font-size: 10px;
     }
+}
+
+.close-button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    margin: 0;
+    font-size: 24px;
+    color: rgb(255, 255, 255);
+    transition: color 0.3s ease;
+    float: right; /* Đặt nút ở bên phải */
+    margin-left: 95%;
+}
+
+.close-button:hover {
+    color: #ff0000;
+}
+
+
+.btn-header {
+    background-color: rgb(146, 127, 3);
 }
