--- a/src/app/student/register-teacher/register-teacher.component.css
+++ b/src/app/student/register-teacher/register-teacher.component.css
@@ -1,4 +1,4 @@
-body {
+.body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     margin: 0;
@@ -13,6 +13,7 @@ body {
     background-image: url('../../../assets/imgs/background/background.png');
     background-size: cover;
     background-repeat: no-repeat;
+    position: relative;
 }
 
 .container {
@@ -79,7 +80,7 @@ button:hover {
     background-color: #d48207;
 }
 
-table {
+table { 
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
@@ -170,6 +171,7 @@ td {
     box-sizing: border-box;
     order: 1;
     border: 1px solid #444343;
+    margin-bottom: 50px;
 }
 
 .register_topic {
@@ -181,7 +183,9 @@ td {
     border: 1px solid #444343;
     border-radius: 10px;
     box-sizing: border-box;
+    margin-top: 30px;
 }
+
 
 .info,
 .register_topic {
@@ -209,6 +213,7 @@ td {
 .topp{
     margin-bottom: 70px;
     margin-top: 150px;
+    /* position: relative; */
 }
 .report_calendar {
     width: 90%;
@@ -219,3 +224,25 @@ td {
     /* margin-top: 150px; */
     margin-bottom: 50px;
 }
+.info{
+    position: sticky;
+    position: -webkit-sticky;
+    top: 150px;
+}
+
+.infom {
+    margin-bottom: 10px;
+    /* margin-top: 10px; */
+    /* background-color: #d48207; */
+}
+
+a {
+    background-color: #c28324;
+    border: 1px solid #c28324;
+}
+a:hover {
+    background-color: #d48207;
+}
+/* i {
+    margin-right: 5px;
+} */
